--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     text-decoration: none;
     list-style: none;
 }
-
+button
 .custom-toast {
     box-shadow: none !important;
     font-family: 'Inter';
@@ -285,13 +285,13 @@ form {
     font-weight: 500;
 }
 
-form button {
+input.btn-message {
     width: 120px;
     height: 40px;
     color: var(--cor002);
 }
 
-form button:hover {
+input.btn-message:hover {
     background-color: lightgray;
 }
 
@@ -352,6 +352,8 @@ form button:hover {
         width: 64%;
         height: 64%;
     }
+
+    
 }
 
 
@@ -475,7 +477,7 @@ form button:hover {
         width: 90%;
     }
 
-    form button {
+    input.btn-message {
         width: 100%;
     }
 
